# Raza

./: .gitignore  HRaza.cabal  README.md  build.sbt  examples.rz  grammar.txt  stack.yaml
.stack-work/install/x86_64-linux-tinfo6-nopie/lts-10.4/8.2.2/flag-cache/: HRaza-0.1.0.0
examples/: adder.rz  fibonacci.rz
src/: Main.hs  Parser.hs
src/main/scala/: .RazaTypes.scala@neomake_20714_7.scala  Interpreter.scala  Lexer.scala  Parser.scala  RazaTypes.scala  Runner.scala
