name:                HRaza
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mpardalos/Raza
license:             MIT
license-file:        LICENSE
author:              Michalis Pardalos
maintainer:          mpardalos@gmail.com
copyright:           2018 Michail Pardalos
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable HRaza
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Parser
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  extensions:          ExistentialQuantification
